--- a/examples/06-组件/48-提示框/48-提示框-1.html
+++ b/examples/06-组件/48-提示框/48-提示框-1.html
@@ -17,7 +17,7 @@
             box-shadow: rgb(174, 174, 174) 0px 0px 10px;
         }
     </style>
-    <script src="../../lib/g6-3.8.5.min.js"></script>
+    <script src="../../../lib/g6-3.8.5.min.js"></script>
     <!-- <script src="../00-mock/8dacf27e-e1bc-4522-b6d3-4b6d9b9ed7df.js"></script> -->
 </head>
 
@@ -36,7 +36,7 @@
             nodes: [
                 {
                     id: '0',
-                    label: 'Has Tooltip - node0',
+                    label: 'node-0',
                     x: 100,
                     y: 100,
                     description: 'This is node-0.',
@@ -44,7 +44,7 @@
                 },
                 {
                     id: '1',
-                    label: 'No Tooltip - node1',
+                    label: 'node-1',
                     x: 250,
                     y: 100,
                     description: 'This is node-1.',
@@ -52,7 +52,7 @@
                 },
                 {
                     id: '2',
-                    label: 'Tooltip on Text - node2',
+                    label: 'node-2',
                     x: 150,
                     y: 310,
                     description: 'This is node-2.',
@@ -60,7 +60,7 @@
                 },
                 {
                     id: '3',
-                    label: 'Tooltip on KeyShape - node-3',
+                    label: 'node-3',
                     x: 320,
                     y: 310,
                     description: 'This is node-3.',
@@ -112,27 +112,6 @@
       </ul>`;
                 return outDiv;
             },
-            shouldBegin: (e) => {
-                console.log(e.target)
-                let res = true;
-                switch (e.item.getModel().id) {
-                    case '1':
-                        res = false;
-                        break;
-                    case '2':
-                        if (e.target.get('name') === 'text-shape') res = true;
-                        else res = false;
-                        break;
-                    case '3':
-                        if (e.target.get('name') !== 'text-shape') res = true;
-                        else res = false;
-                        break;
-                    default:
-                        res = true;
-                        break;
-                }
-                return res;
-            }
         });
         const width = document.getElementById('container').scrollWidth;
         const height = document.getElementById('container').scrollHeight || 500;
@@ -162,8 +141,6 @@
         });
         graph.data(data);
         graph.render();
-
-        console.log(graph.getNodes()[0])
     </script>
 </body>
 
