--- a/examples/02-一般图/09-Fruchterman图布局/09-Fruchterman图布局-4.html
+++ b/examples/02-一般图/09-Fruchterman图布局/09-Fruchterman图布局-4.html
@@ -20,7 +20,7 @@
             text-align: center;
         }
     </style>
-    <script src="../../lib/g6-3.8.5.min.js"></script>
+    <script src="../../../lib/g6-3.8.5.min.js"></script>
     <script src="../00-mock/7bacd7d1-4119-4ac1-8be3-4c4b9bcbc25f.js"></script>
 </head>
 
