--- a/examples/02-一般图/09-Fruchterman图布局/09-Fruchterman图布局-2.html
+++ b/examples/02-一般图/09-Fruchterman图布局/09-Fruchterman图布局-2.html
@@ -20,7 +20,7 @@
             text-align: center;
         }
     </style>
-    <script src="../../lib/g6-3.8.5.min.js"></script>
+    <script src="../../../lib/g6-3.8.5.min.js"></script>
     <!-- <script src="../00-mock/data-5-relations.js"></script> -->
 </head>
 
