--- a/examples/02-一般图/08-dagre流程图/08-dagre流程图-1.html
+++ b/examples/02-一般图/08-dagre流程图/08-dagre流程图-1.html
@@ -12,12 +12,17 @@
         }
 
         .g6-tooltip {
-            border-radius: 6px;
-            font-size: 20px;
+            min-width: 30px;
+            min-height: 32px;
+            padding: 6px 8px;
             color: #fff;
-            background-color: #000;
-            padding: 2px 8px;
-            text-align: center;
+            text-align: left;
+            text-decoration: none;
+            word-wrap: break-word;
+            background-color: rgba(0,0,0,.75);
+            border-radius: 2px;
+            /* -webkit-box-shadow: 0 3px 6px -4px rgba(0,0,0,.12),0 6px 16px 0 rgba(0,0,0,.08),0 9px 28px 8px rgba(0,0,0,.05); */
+            /* box-shadow: 0 3px 6px -4px rgba(0,0,0,.12),0 6px 16px 0 rgba(0,0,0,.08),0 9px 28px 8px rgba(0,0,0,.05) */
         }
 
         .tool-tip-my {
