--- a/examples/06-组件/48-提示框/48-提示框-5.html
+++ b/examples/06-组件/48-提示框/48-提示框-5.html
@@ -12,13 +12,15 @@
         }
 
         .g6-tooltip {
-            border: 1px solid #e2e2e2;
-            border-radius: 4px;
-            font-size: 12px;
-            color: #545454;
-            background-color: rgba(255, 255, 255, 0.9);
-            padding: 10px 8px;
-            box-shadow: rgb(174, 174, 174) 0px 0px 10px;
+            min-width: 30px;
+            /* min-height: 32px; */
+            padding: 6px 8px;
+            color: #fff;
+            text-align: left;
+            text-decoration: none;
+            word-wrap: break-word;
+            background-color: rgba(0,0,0,.75);
+            border-radius: 2px;
         }
     </style>
     <script src="../../../lib/g6-3.8.5.min.js"></script>
