--- a/examples/01-树图/02-生态树/02-生态树-1.html
+++ b/examples/01-树图/02-生态树/02-生态树-1.html
@@ -30,7 +30,8 @@
                     {
                         type: 'collapse-expand',
                         onChange: function onChange(item, collapsed) {
-                            const data = item.get('model').data;
+                            const data = item.get('model');
+                            console.log('%c data===', 'color:#fff;background: red;', data)
                             data.collapsed = collapsed;
                             return true;
                         },
