--- a/examples/01-树图/05-辐射树/05-辐射树-1.html
+++ b/examples/01-树图/05-辐射树/05-辐射树-1.html
@@ -12,7 +12,7 @@
         }
     </style>
     <script src="../../../lib/g6-4.0.3.min.js"></script>
-    <!-- <script src="../../00-mock/data-1.js"></script> -->
+    <script src="../../00-mock/data-1.js"></script>
 </head>
 
 <body>
@@ -49,35 +49,35 @@
                     //     ]
                     // }
 
-                    const data = {
-                        "id": "group-source-4144",
-                        "children": [
-                            {
-                                "id": "person-4144-8264",
-                                "children": []
-                            },
-                            {
-                                "id": "person-4144-16456",
-                                "children": []
-                            },
-                            {
-                                "id": "person-4144-8424",
-                                "children": []
-                            },
-                            {
-                                "id": "person-4144-4304",
-                                "children": []
-                            },
-                            {
-                                "id": "person-4144-2048004176",
-                                "children": []
-                            },
-                            {
-                                "id": "person-4144-4112",
-                                "children": []
-                            }
-                        ]
-                    }
+                    // const data = {
+                    //     "id": "group-source-4144",
+                    //     "children": [
+                    //         {
+                    //             "id": "person-4144-8264",
+                    //             "children": []
+                    //         },
+                    //         {
+                    //             "id": "person-4144-16456",
+                    //             "children": []
+                    //         },
+                    //         {
+                    //             "id": "person-4144-8424",
+                    //             "children": []
+                    //         },
+                    //         {
+                    //             "id": "person-4144-4304",
+                    //             "children": []
+                    //         },
+                    //         {
+                    //             "id": "person-4144-2048004176",
+                    //             "children": []
+                    //         },
+                    //         {
+                    //             "id": "person-4144-4112",
+                    //             "children": []
+                    //         }
+                    //     ]
+                    // }
                 
 
         const width = document.getElementById('container').scrollWidth;
