--- a/examples/02-一般图/13-Concentric同心圆布局/13-Concentric同心圆布局.html
+++ b/examples/02-一般图/13-Concentric同心圆布局/13-Concentric同心圆布局.html
@@ -41,6 +41,8 @@
                 type: 'concentric',
                 // 每一层同心值的求和。若为undefined，则将会被设置为maxValue/4，其中maxValue为最大的排序依据的属性值。例如，若sortBy为'degree'，则maxValue为所有节点中度数最大的节点的度数
                 maxLevelDiff: 0.5,
+                // linkDistance: 500,
+                // minNodeSpacing: 300,
                 // 指定排序的依据（节点属性名），数值越高则该节点被放置得越中心。若为 undefined，则会计算节点的度数，度数越高，节点将被放置得越中心
                 sortBy: 'degree',
             },
