--- a/examples/03-元素/18-内置节点/18-内置节点-1.html
+++ b/examples/03-元素/18-内置节点/18-内置节点-1.html
@@ -46,7 +46,7 @@
             width,
             height,
             // translate the graph to align the canvas's center, support by v3.5.1
-            fitCenter: true,
+            // fitCenter: true,
             defaultNode: {
                 type: 'circle',
                 size: [160],
