--- a/examples/02-一般图/08-dagre流程图/08-dagre流程图-5.html
+++ b/examples/02-一般图/08-dagre流程图/08-dagre流程图-5.html
@@ -248,7 +248,8 @@
                 style: {
                     endArrow: {
                         path: 'M 0,0 L 8,4 L 8,-4 Z',
-                        fill: '#e2e2e2',
+                        // fill: '#e2e2e2',
+                        fill: '#ff0000',
                     },
                 },
             },
