--- a/examples/02-一般图/17-布局机制/17-布局机制-3-自定义.html
+++ b/examples/02-一般图/17-布局机制/17-布局机制-3-自定义.html
@@ -160,6 +160,7 @@
                     node.x = i * 80
                     node.y = i * 80
                 })
+                console.log('%c newNodes===', 'color:#fff;background: red;', JSON.stringify(nodes))
             },
         });
 
@@ -193,6 +194,7 @@
                 default: ['drag-node', 'drag-canvas', 'zoom-canvas'],
             },
         });
+            console.log('%c data===', 'color:#fff;background: red;', JSON.stringify(data))
         graph.data(data);
         graph.render();
     </script>
