--- a/examples/03-元素/22-自定义节点/22-自定义节点-01.html
+++ b/examples/03-元素/22-自定义节点/22-自定义节点-01.html
@@ -435,8 +435,10 @@
             setState: nodeBasicMethod.setState,
         });
 
-        const width = document.getElementById('container').scrollWidth;
-        const height = document.getElementById('container').scrollHeight || 500;
+
+    const container = document.getElementById('container');
+    const width = container.scrollWidth;
+    const height = container.scrollHeight || 500;
         graph = new G6.Graph({
             container: 'container',
             width,
@@ -447,7 +449,7 @@
                 default: ['drag-node'],
             },
             defaultNode: {
-                shape: 'card-node',
+                type: 'card-node',
             },
         });
 
@@ -489,10 +491,16 @@
             edges: [],
         };
 
-        const canvas = graph.get('canvas');
-
         graph.data(data);
         graph.render();
+
+    if (typeof window !== 'undefined') {
+        window.onresize = () => {
+            if (!graph || graph.get('destroyed')) return;
+            if (!container || !container.scrollWidth || !container.scrollHeight) return;
+            graph.changeSize(container.scrollWidth, container.scrollHeight);
+        };
+    }
     </script>
 </body>
 
