--- a/examples/03-元素/22-自定义节点/22-自定义节点-02.html
+++ b/examples/03-元素/22-自定义节点/22-自定义节点-02.html
@@ -152,7 +152,7 @@
                 default: ['drag-canvas', 'drag-node'],
             },
             defaultNode: {
-                shape: 'card-node',
+                type: 'card-node',
             },
             fitView: true,
         });
