高亮相邻节点

--- a/examples/03-元素/25-超长文本/25-超长文本-1.html
+++ b/examples/03-元素/25-超长文本/25-超长文本-1.html
@@ -146,6 +146,7 @@
             node.label = fittingString(node.label, node.size, globalFontSize);
         });
         data.edges.forEach(function (edge) {
+            console.log('%c edge===', 'color:#fff;background: red;', edge)
             edge.label = fittingString(edge.label, 120, globalFontSize);
         });
 
