--- a/examples/04-交互/31-改变标签或背景/31-改变标签或背景-2.html
+++ b/examples/04-交互/31-改变标签或背景/31-改变标签或背景-2.html
@@ -88,6 +88,7 @@
                 container: 'container',
                 width,
                 height,
+                linkCenter: true,
                 defaultNode: {
                     style: {
                         fill: '#DEE9FF',
