--- a/practice/02-设置节点或边的背景.html
+++ b/practice/02-设置节点或边的背景.html
@@ -52,13 +52,13 @@
             defaultNode: {
                 position: 'left',
                 style: {
+                    fill: 'https://os.alipayobjects.com/rmsportal/CcFeLxXurbQmwrT.jpg',
                 background: {
-                    fill: '#ff0000',
                     // stroke: 'green',
                     stroke: 'red',
                     padding: [3, 2, 3, 2],
                     radius: 2,
-                    lineWidth: 3,
+                    lineWidth: 13,
                 },
                 },
             },
