--- a/practice/20-我的客户.html
+++ b/practice/20-我的客户.html
@@ -29,9 +29,10 @@
                 type: 'force',
                 preventOverlap: true,
                 linkDistance: (d) => {
-                    if (d.source.id === 'node0') {
-                        return 100;
-                    }
+                    console.log(d.source)
+                    // if (d.source.id === 'node0') {
+                    //     return 100;
+                    // }
                     return 30;
                 },
                 nodeStrength: (d) => {
