fix(layout): bugfix grid default config layout

--- a/examples/02-一般图/18-自定义布局/18-自定义布局-3-my-grid.html
+++ b/examples/02-一般图/18-自定义布局/18-自定义布局-3-my-grid.html
@@ -62,6 +62,9 @@
                 height: 400,
                 rows: 4,
                 cols: 4,
+
+                // 配置
+                begin: [100, 100],
             },
             animate: true,
             // defaultNode: {
