--- a/examples/02-一般图/18-自定义布局/18-自定义布局-5-my-fruchterman.html
+++ b/examples/02-一般图/18-自定义布局/18-自定义布局-5-my-fruchterman.html
@@ -25,6 +25,7 @@
 </head>
 
 <body>
+    <!-- 对标: examples/02-一般图/09-Fruchterman图布局/09-Fruchterman图布局-1.html -->
     <!-- 1. 创建容器 -->
     <div id="container"></div>
     <script>
