--- a/examples/02-一般图/08-dagre流程图/08-dagre流程图-1.html
+++ b/examples/02-一般图/08-dagre流程图/08-dagre流程图-1.html
@@ -334,17 +334,17 @@
         graph.data(data);
         graph.render();
 
-    setTimeout(() => {
-        document.querySelector('.tool-tip-my').innerHTML = 5000
-        document.querySelector('.tool-tip-my').style.width = 200
-        document.querySelector('.tool-tip-my').style.height = 100
-    }, 5000);
+    // setTimeout(() => {
+    //     document.querySelector('.tool-tip-my').innerHTML = 5000
+    //     document.querySelector('.tool-tip-my').style.width = 200
+    //     document.querySelector('.tool-tip-my').style.height = 100
+    // }, 5000);
 
-    setTimeout(() => {
-        document.querySelector('.tool-tip-my').innerHTML = 10000
-        document.querySelector('.tool-tip-my').style.width = 600
-        document.querySelector('.tool-tip-my').style.height = 300
-    }, 10000);
+    // setTimeout(() => {
+    //     document.querySelector('.tool-tip-my').innerHTML = 10000
+    //     document.querySelector('.tool-tip-my').style.width = 600
+    //     document.querySelector('.tool-tip-my').style.height = 300
+    // }, 10000);
 
     </script>
 </body>
