--- a/examples/01-树图/01-紧凑树/01-紧凑树-1-resize.html
+++ b/examples/01-树图/01-紧凑树/01-紧凑树-1-resize.html
@@ -50,6 +50,10 @@
                         [0, 0.5],
                         [1, 0.5],
                     ],
+                    // anchorPoints: [
+                    //     [0.5, 0],
+                    //     [0.5, 1],
+                    // ],
                     style: {
                         fill: '#C6E5FF',
                         stroke: '#5B8FF9',
