--- a/examples/65-经典案例/65-经典案例-5-01/65-经典案例-5-01.html
+++ b/examples/65-经典案例/65-经典案例-5-01/65-经典案例-5-01.html
@@ -20,8 +20,10 @@
 
 <body>
     <div id="container"></div>
+    <script src="https://cdn.bootcdn.net/ajax/libs/tween.js/18.6.4/tween.umd.min.js"></script>
     <script src="/lib/g6-4.0.3.min.js"></script>
     <script type="module" src="./65-经典案例-5-01-index.js"></script>
+    <!-- <script type="module" src="./65-经典案例-5-01-index-simple.js"></script> -->
 </body>
 
 </html>
